added about/contact page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>Welcome to marketplace!</h1>
+<p>A new market to buy and sell items that you are passionate about.</p>
