--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <a href="/pages/about">About</a>
+    <a href="/pages/contact">Contact</a>
     <%= yield %>
+    <p>Copyright 2017</p>
   </body>
 </html>
