--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,10 @@
   </head>
 
   <body>
-    <a href="/pages/about">About</a>
-    <a href="/pages/contact">Contact</a>
+    <%= render 'layouts/nav' %>
+
     <%= yield %>
+   
     <p>Copyright 2017</p>
   </body>
 </html>
