--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
 
   <body>
     <%= render 'layouts/nav' %>
-
-    <%= yield %>
-   
-    <%= render 'layouts/footer' %>
+    <div class="container">
+        <%= yield %>
+        <%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
