--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(listing) do |f| %>
-  <% if listing.errors.any? %>
+<%= form_for @listing, html: { multipart: true } do |f| %>
+  <% if @listing.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
+      <h2><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
 
       <ul>
-      <% listing.errors.full_messages.each do |message| %>
+      <% @listing.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -24,6 +24,11 @@
   <div class="form-group">
     <%= f.label :price %>
     <%= f.text_field :price, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image, class: "form-control" %>
   </div>
 
   <div class="actions">
