--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,22 +1,30 @@
 <p id="notice"><%= notice %></p>
 
-<%= image_tag @listing.image.url(:medium) %>
+<div class="row">
+    <div class="col-md-6">
+        <div class="thumbnail">
+            <%= image_tag @listing.image.url %>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <p>
+          <strong>Name:</strong>
+          <%= @listing.name %>
+        </p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @listing.name %>
-</p>
+        <p>
+          <strong>Description:</strong>
+          <%= @listing.description %>
+        </p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @listing.description %>
-</p>
+        <p>
+          <strong>Price:</strong>
+          <%= number_to_currency(@listing.price) %>
+        </p>
 
-<p>
-  <strong>Price:</strong>
-  <%= @listing.price %>
-</p>
-
-
-<%= link_to 'Edit', edit_listing_path(@listing), class: "btn btn-link" %> |
-<%= link_to 'Back', listings_path, class: "btn btn-link" %>
+        <p>
+            <%= link_to 'Edit', edit_listing_path(@listing), class: "btn btn-link" %> |
+            <%= link_to 'Back', listings_path, class: "btn btn-link" %>
+        </p>
+    </div>
+</div>
