--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,4 @@
-<h1>Please contact me with any questions</h1>
-<p>marenwoodruff.com</p>
+<div class="center">
+    <h1>Please contact me with any questions</h1>
+    <p><a href="mailto:marenwoodruff@gmail.com?Subject=All%20Thats%20Fem">marenwoodruff.com</a></p>
+</div>
