--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Listing</h1>
+<div class="col-md-6 col-md-offset-3">
+    <h1 class="margin-bottom">Edit <%= @listing.name %></h1>
 
-<%= render 'form', listing: @listing %>
+    <%= render 'form', listing: @listing %>
 
-<%= link_to 'Show', @listing, class: "btn btn-link" %> |
-<%= link_to 'Back', listings_path, class: "btn btn-link" %>
+    <div class="margin-top center">
+        <%= link_to 'Show', @listing, class: "btn btn-link" %> |
+        <%= link_to 'Back', listings_path, class: "btn btn-link" %>
+    </div>
+</div>
