--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Listing</h1>
+<div class="col-md-6 col-md-offset-3">
+    <h1>New Listing</h1>
 
-<%= render 'form', listing: @listing %>
+    <%= render 'form', listing: @listing %>
 
-<%= link_to 'Back', listings_path, class: "btn btn-link" %>
+    <%= link_to 'Back', listings_path, class: "btn btn-link" %>
+</div>
