--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome to marketplace!</h1>
-<p>A new market to buy and sell items that you are passionate about.</p>
+<div class="center margin-bottom">
+    <h1>Welcome to All That's Fem!</h1>
+    <p>A new marketplace where you can buy and sell feminist products.</p>
+</div>
